--- a/aboutme.html
+++ b/aboutme.html
@@ -1,66 +1,71 @@
-<!DOCTYPE html><html><head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style.css">
+<html>
 
-  <script src="lib/p5.min.js"></script>
-  <script src="lib/p5.dom.min.js"></script>
-  <script src="lib/p5.sound.min.js"></script>
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
-  <title>About Me</title>
-
-
+<head>
+    <meta name="keywords" content="Max Charlamb, Charlamb, mbc222, Cornell University, mcharlamb">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Max Charlamb</title>
+    <link href="styles/global.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/2482c5e987.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #3678e2;">
-        <a class="navbar-brand" href="index.html">Max Charlamb</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="aboutme.html">About Me</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Projects
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="antennatracker.html">Antenna Tracker</a>
-                        <a class="dropdown-item" href="spanningtree.html">Spanning Tree</a>
-                        <a class="dropdown-item" href="particles.html">Particles</a>
-                        <a class="dropdown-item" href="rain.html">Rain</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="about-body">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <img src="img/max.JPG" class="img-fluid">
+    <div class="site">
+        <header class="site-header">
+            <nav class="site-nav">
+                <a class="site-nav-link" href="index.html">Home</a>
+                <a class="site-nav-link" href="projects.html">Projects</a>
+                <a class="site-nav-link" href="education.html">Education</a>
+                <a class="site-nav-link current" href="aboutme.html">About Me</a>
+            </nav>
+        </header>
+        <div class="site-content">
+        
+            <div class="site-item">
+                <div class="site-item-header">
+                    About Me
                 </div>
-                <div class="col-sm-6">
-                    <p class="flow-text">Hi, I'm Max Charlamb and I study CS and ECE at Cornell University.</p>
+                <div>
+                    <p>
+                        When I have free time I enjoy running and sailing. During undergrad I was involved in the sailing team where we competed all over the northeast in 420s and FJs.
+                        I helped lead the team my senior year as a co-captain.
+                    </p>
+
+                    <p>While I am in NYC for gradschool I am hoping to run the NYC marathon!</p>
+                </div>
+                
+                <div class="pic_outerwrap" style="float:left">
+                    <div class="pic_outline">
+                        <div class="pic_inset"><img width="300px" src="img/sailing1.jpeg"></div>
+                    </div>
+                </div>
+                <div class="pic_outerwrap" style="float:right">
+                    <div class="pic_outline">
+                        <div class="pic_inset"><img width="300px" src="img/running1.jpg"></div>
+                    </div>
                 </div>
             </div>
         </div>
+        <footer class="site-footer">
+            <hr class="site-footer-spacer">
+            <div class="site-copy">
+                © 2022
+                <span class="site-author">Max Charlamb</span>
+            </div>
+            <div class="site-links">
+                <a taget="_blank" rel="external" href="https://github.com/max-charlamb">
+                    <i class="fa-brands fa-2x fa-github site-icon-hover"></i>
+                </a>
+                <a taget="_blank" rel="external" href="https://www.linkedin.com/in/maxcharlamb/">
+                    <i class="fa-brands fa-2x fa-linkedin site-icon-hover"></i>
+                </a>
+                <a href="mailto:mbc222@cornell.edu">
+                    <i class="fa-solid fa-2x fa-envelope site-icon-hover"></i>
+                </a>
+            </div>
+        </footer>
     </div>
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
