--- a/index.html
+++ b/index.html
@@ -1,125 +1,61 @@
-<!DOCTYPE html><html><head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+<html>
 
-    <script src="lib/p5.min.js"></script>
-    <script src="lib/p5.dom.min.js"></script>
-    <script src="lib/p5.sound.min.js"></script>
+<!-- Mirrored from mbernhard.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 08 Mar 2019 19:21:25 GMT -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 
+<head>
+    <meta name="keywords" content="Max Charlamb, Charlamb, mbc222, Cornell University, mcharlamb">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Max Charlamb</title>
-
-
+    <link href="styles/global.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/2482c5e987.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-
-
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #3678e2;">
-        <a class="navbar-brand" href="index.html">Max Charlamb</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="aboutme.html">About Me</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Projects
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="antennatracker.html">Antenna Tracker</a>
-                        <a class="dropdown-item" href="sort.html"> Sorting visulization</a>
-                        <a class="dropdown-item" href="spanningtree.html">Spanning Tree</a>
-                        <a class="dropdown-item" href="particles.html">Particles</a>
-                        <a class="dropdown-item" href="rain.html">Rain</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container" id="main">
-        <div class="row" align="center">
-            <div class="col-sm">
-                <div class="card mb-5" style="width: 18rem;">
-                    <img src="img/spanningtree.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Spanning Tree</h5>
-                        <p class="card-text">A visulization of Prim's algorithm to create a spanning tree.</p>
-                        <a href="spanningtree.html" class="btn btn-primary">Go</a>
+    <div class="site">
+        <header class="site-header">
+            <nav class="site-nav">
+                <a class="site-nav-link current" href="index.html">Home</a>
+                <a class="site-nav-link" href="projects.html">Projects</a>
+                <a class="site-nav-link" href="education.html">Education</a>
+                <a class="site-nav-link" href="aboutme.html">About Me</a>
+            </nav>
+        </header>
+        <div class="site-content">
+            <div class="site-center">
+                <div class="pic_outerwrap">
+                    <div class="pic_outline">
+                        <div class="pic_inset"><img width="400px" src="img/max.JPG"></div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm">
-                <div class="card mb-5" style="width: 18rem;">
-                    <img src="img/particles.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Particles</h5>
-                        <p class="card-text">A background made with particles and physics.</p>
-                        <a href="particles.html" class="btn btn-primary">Go</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm">
-                <div class="card mb-5" style="width: 18rem;">
-                    <img src="img/rain.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Rain</h5>
-                        <p class="card-text">A small zen background made using p5.js.</p>
-                        <a href="rain.html" class="btn btn-primary">Go</a>
-                    </div>
-                </div>
-            </div>
-
-
-        <div class="col-sm">
-            <div class="card mb-5" style="width: 18rem;">
-                <img src="img/sort.PNG" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Sorting visulization</h5>
-                    <p class="card-text">A visulization of varying sorting algorithms.</p>
-                    <a href="sort.html" class="btn btn-primary">Go</a>
+                <div class="site-intro">
+                    <p>Hi, I'm <b>Max Charlamb</b>!</p>
+                    <p>I am incoming SDE intern at Microsoft.</p>
+                    <p>I am persuing an MEng at Cornell Tech in NYC.</p>
+                    <p>My intrests are in programming languages and distrubted systems.</p>
                 </div>
             </div>
         </div>
-        <div class="col-sm">
-            <div class="card mb-5" style="width: 18rem;">
-                <img src="img/particles.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Particles</h5>
-                    <p class="card-text">A background made with particles and physics.</p>
-                    <a href="particles.html" class="btn btn-primary">Go</a>
-                </div>
+        <footer class="site-footer">
+            <hr class="site-footer-spacer">
+            <div class="site-copy">
+                © 2022
+                <span class="site-author">Max Charlamb</span>
             </div>
-        </div>
-        <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-                <img src="img/rain.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Rain</h5>
-                    <p class="card-text">A small zen background made using p5.js.</p>
-                    <a href="rain.html" class="btn btn-primary">Go</a>
-                </div>
+            <div class="site-links">
+                <a taget="_blank" rel="external" href="https://github.com/max-charlamb">
+                    <i class="fa-brands fa-2x fa-github site-icon-hover"></i>
+                </a>
+                <a taget="_blank" rel="external" href="https://www.linkedin.com/in/maxcharlamb/">
+                    <i class="fa-brands fa-2x fa-linkedin site-icon-hover"></i>
+                </a>
+                <a href="mailto:mbc222@cornell.edu">
+                    <i class="fa-solid fa-2x fa-envelope site-icon-hover"></i>
+                </a>
             </div>
-        </div>
+        </footer>
     </div>
+</body>
 
-    <div id="backgroundcanvas">
-
-    </div>
-
-
-    <script src="sketches/background.js"></script>
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body></html>
+</html>
