--- a/aboutme.html
+++ b/aboutme.html
@@ -13,19 +13,26 @@
 <body>
     <div class="site">
         <header class="site-header">
+            <div class="site-title">
+                <a href="index.html">
+                    <img class="site-logo" src="img/maxcharlamb.png">
+                </a>
+            </div>
             <nav class="site-nav">
-                <a class="site-nav-link" href="index.html">Home</a>
+                <a class="site-nav-link" href="work.html">Work</a>
                 <a class="site-nav-link" href="projects.html">Projects</a>
                 <a class="site-nav-link" href="education.html">Education</a>
                 <a class="site-nav-link current" href="aboutme.html">About Me</a>
             </nav>
         </header>
         <div class="site-content">
-        
-            <div class="site-item">
-                <div class="site-item-header">
-                    About Me
+            <header class="page-header"><h1>About Me</h1></header>
+            <div class="pic_outerwrap">
+                <div class="pic_outline">
+                    <div class="pic_inset"><img width="400px" src="img/max.JPG"></div>
                 </div>
+            </div>
+            <div class="site-item">
                 <div>
                     <p>
                         When I have free time I enjoy running and sailing. During undergrad I was involved in the sailing team where we competed all over the northeast in 420s and FJs.
