--- a/education.html
+++ b/education.html
@@ -14,14 +14,20 @@
 <body>
     <div class="site">
         <header class="site-header">
+            <div class="site-title">
+                <a href="index.html">
+                    <img class="site-logo" src="img/maxcharlamb.png">
+                </a>
+            </div>
             <nav class="site-nav">
-                <a class="site-nav-link" href="index.html">Home</a>
+                <a class="site-nav-link" href="work.html">Work</a>
                 <a class="site-nav-link" href="projects.html">Projects</a>
                 <a class="site-nav-link current" href="education.html">Education</a>
                 <a class="site-nav-link" href="aboutme.html">About Me</a>
             </nav>
         </header>
         <div class="site-content">
+            <!-- <header class="page-header"><h1>Where I went to school</h1></header> -->
             <div class="site-item">
                 <div class="site-item-header">
                     Cornell Tech
