--- a/index.html
+++ b/index.html
@@ -15,27 +15,25 @@
 <body>
     <div class="site">
         <header class="site-header">
+            <div class="site-title">
+                <a href="index.html">
+                    <img class="site-logo" src="img/maxcharlamb.png">
+                </a>
+            </div>
             <nav class="site-nav">
-                <a class="site-nav-link current" href="index.html">Home</a>
+                <a class="site-nav-link" href="work.html">Work</a>
                 <a class="site-nav-link" href="projects.html">Projects</a>
                 <a class="site-nav-link" href="education.html">Education</a>
                 <a class="site-nav-link" href="aboutme.html">About Me</a>
             </nav>
         </header>
         <div class="site-content">
-            <div class="site-center">
-                <div class="pic_outerwrap">
-                    <div class="pic_outline">
-                        <div class="pic_inset"><img width="400px" src="img/max.JPG"></div>
-                    </div>
-                </div>
                 <div class="site-intro">
                     <p>Hi, I'm <b>Max Charlamb</b>!</p>
-                    <p>I am incoming SDE intern at Microsoft.</p>
+                    <p>I am an incoming SDE intern at Microsoft.</p>
                     <p>I am persuing an MEng at Cornell Tech in NYC.</p>
-                    <p>My intrests are in programming languages and distrubted systems.</p>
+                    <p>My intrests are in programming languages and distributed systems.</p>
                 </div>
-            </div>
         </div>
         <footer class="site-footer">
             <hr class="site-footer-spacer">
