updated projects page

--- a/projects/sort.html
+++ b/projects/sort.html
@@ -17,8 +17,13 @@
 <body>
     <div class="site">
         <header class="site-header">
+            <div class="site-title">
+                <a href="index.html">
+                    <img class="site-logo" src="../img/maxcharlamb.png">
+                </a>
+            </div>
             <nav class="site-nav">
-                <a class="site-nav-link" href="../index.html">Home</a>
+                <a class="site-nav-link" href="../work.html">Work</a>
                 <a class="site-nav-link" href="../projects.html">Projects</a>
                 <a class="site-nav-link" href="../education.html">Education</a>
                 <a class="site-nav-link" href="../aboutme.html">About Me</a>
