updated some projects

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,8 @@
 <head>
     <meta name="keywords" content="Max Charlamb, Charlamb, mbc222, Cornell University, mcharlamb">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Max Charlamb</title>
+    <title>About Me</title>
+    <link rel="icon" type="image/x-icon" href="img/maxcharlamb.png">
     <link href="styles/global.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/2482c5e987.js" crossorigin="anonymous"></script>
 </head>
