--- a/projects/sort.html
+++ b/projects/sort.html
@@ -10,6 +10,7 @@
     <link href="../styles/global.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/2482c5e987.js" crossorigin="anonymous"></script>
     <title>Sort</title>
+    <link rel="icon" type="image/x-icon" href="../img/maxcharlamb.png">
 </head>
 
 
