--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
 <head>
     <meta name="keywords" content="Max Charlamb, Charlamb, mbc222, Cornell University, mcharlamb">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Education</title>
+    <title>Work</title>
     <link rel="icon" type="image/x-icon" href="img/maxcharlamb.png">
     <link href="styles/global.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/2482c5e987.js" crossorigin="anonymous"></script>
@@ -21,20 +21,20 @@
                 </a>
             </div>
             <nav class="site-nav">
-                <a class="site-nav-link" href="work.html">Work</a>
+                <a class="site-nav-link current" href="work.html">Work</a>
                 <a class="site-nav-link" href="projects.html">Projects</a>
-                <a class="site-nav-link current" href="education.html">Education</a>
+                <a class="site-nav-link" href="education.html">Education</a>
                 <a class="site-nav-link" href="aboutme.html">About Me</a>
             </nav>
         </header>
         <div class="site-content">
-            <!-- <header class="page-header"><h1>Where I went to school</h1></header> -->
-            <div class="site-item">
+            <header class="page-header"><h1>WIP</h1></header>
+            <!-- <div class="site-item">
                 <div class="site-item-header">
-                    Cornell Tech
+                    Microsoft
                 </div>
                 <span style="display:table; margin-bottom:2rem;">
-                    <img src="img/cornell_tech.png" style="width: 6rem">
+                    <img src="img/microsoft.svg" style="width: 6rem">
                     <div style="display:table-cell; vertical-align:middle; padding-left: 1rem; width:100%">
                         <div>MEng in Computer Science from Cornell Tech expected spring 2023 </div>
                         <div style="text-align:left;">
@@ -49,10 +49,10 @@
             <hr>
             <div class="site-item">
                 <div class="site-item-header">
-                    Cornell University
+                    Amazon (AWS)
                 </div>
                 <span style="display:table; margin-bottom:2rem;">
-                    <img src="img/cornell_seal_simple_black.svg" style="width: 6rem">
+                    <img src="img/aws.svg" style="width: 6rem">
                     <div style="display:table-cell; vertical-align:middle; padding-left: 1rem; width:100%">
                         <div>B.S. in Computer Science from Cornell University expected spring 2022 </div>
                         <div style="text-align:left;">
@@ -63,26 +63,15 @@
                         </div>
                     </div>
                 </span>
-                Relevant Coursework:
-                <ul>
-                    <li>CS 5414 - Distributed Systems</li>
-                    <li>CS 4120 - Compilers</li>
-                    <li>CS 4820 - Theory of Algorithms</li>
-                    <li>CS 5430 - System Security</li>
-                    <li>CS 6110 - Advanced Programming Languages</li>
-                    <li>CS 4410 - Operating Systems</li>
-                    <li>CS 2800 - Discrete Structures</li>
-                    <li>CS 4780 - Machine Learning</li>
-                </ul>
             </div>
             <hr>
 
             <div class="site-item">
                 <div class="site-item-header">
-                    Brooks School
+                    Klaviyo
                 </div>
                 <span style="display:table; margin-bottom:2rem;">
-                    <img src="img/brooks-logo.svg" style="width: 6rem">
+                    <img src="img/klaviyo.svg" style="width: 6rem">
                     <div style="display:table-cell; vertical-align:middle; padding-left: 1rem; width:100%">
                         <div>High School Diploma</div>
                         <div style="text-align:left;">
@@ -93,7 +82,7 @@
                         </div>
                     </div>
                 </span>
-            </div>
+            </div> -->
         </div>
         <footer class="site-footer">
             <hr class="site-footer-spacer">
