--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Max Charlamb, Charlamb, mbc222, Cornell University, mcharlamb">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Max Charlamb</title>
+    <link rel="icon" type="image/x-icon" href="img/maxcharlamb.png">
     <link href="styles/global.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/2482c5e987.js" crossorigin="anonymous"></script>
 </head>
@@ -32,7 +33,7 @@
                     <p>Hi, I'm <b>Max Charlamb</b>!</p>
                     <p>I am an incoming SDE intern at Microsoft.</p>
                     <p>I am persuing an MEng at Cornell Tech in NYC.</p>
-                    <p>My intrests are in programming languages and distributed systems.</p>
+                    <p>My intrests are programming languages and distributed systems.</p>
                 </div>
         </div>
         <footer class="site-footer">
