--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,8 @@
 <head>
     <meta name="keywords" content="Max Charlamb, Charlamb, mbc222, Cornell University, mcharlamb">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Max Charlamb</title>
+    <title>Projects</title>
+    <link rel="icon" type="image/x-icon" href="img/maxcharlamb.png">
     <link href="styles/global.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/2482c5e987.js" crossorigin="anonymous"></script>
 </head>
@@ -26,15 +27,43 @@
                 <a class="site-nav-link" href="aboutme.html">About Me</a>
             </nav>
         </header>
+        
         <div class="site-content">
             <header class="page-header"><h1>Some things I've done</h1></header>
             <div class="site-item">
                 <div class="site-item-header">
+                    Novel Key-Value Store
+                </div>
+                Designed and implemented a replication scheme for a novel key-value store under <a class="pretty-link" href="https://www.cs.cornell.edu/~matthelb/">Matt Burke</a>.
+                Replication was based off of the <a class="pretty-link" href="https://syslab.cs.washington.edu/research/tapir/">TAPIR</a> scheme from UW. 
+            </div>
+            <div class="site-item">
+                <div class="site-item-header">
+                    Xi-Compiler
+                </div>
+                Built a compiler for toy language xi as part of CS 4120/4121. Xi language spec can be found <a class="pretty-link" href="https://www.cs.cornell.edu/courses/cs4120/2021sp/project/language.pdf?1616260969">here</a>,
+                the type spec can be found <a class="pretty-link" href="https://www.cs.cornell.edu/courses/cs4120/2021sp/project/types.pdf?1614809996">here</a>, and the ABI spec (application binary interface) can be found <a class="pretty-link" href="https://www.cs.cornell.edu/courses/cs4120/2021sp/project/abi.pdf?1619566659">here</a>.
+            </div>
+            <div class="site-item">
+                <div class="site-item-header">
+                    CUAir
+                </div>
+                <p>
+                    <a class="pretty-link" href="https://cuair.org/">Cornell University Unmanned Air Systems</a> is a student run project team which builds a autonomous drone to compete in the 
+                    <a class="pretty-link" href="https://www.auvsi-suas.org/">AUVSI SUAS</a> competition. The regularly competes at the highest levels. 
+                </p>
+                <p>
+                    I worked on both software and electrical systems. During my time I focused on the antenna tracker, creating an electrical PCB using Altium and AVR microcontrollers
+                    which tracked the planes position in real time and ran motor controllers to adjust the angle of the ground antenna.
+                </p>
+            </div>
+            <div class="site-item">
+                <div class="site-item-header">
                     Array Sort Visualization
                 </div>
-                Visualizes different sorting techniques and compares efficienies. <a class="pretty-link" href="projects/sort.html">Click here to try it out!</a>
+                <p>Using JavaScript framework <a class="pretty-link" href="https://p5js.org/">p5.js</a>, I created several different visualizations while learning software development.</p>
+                <p>This examlpe visualizes and compares speed of different sorting techniques. <a class="pretty-link" href="projects/sort.html">Click here to try it out!</a></p>
             </div>
-            
         </div>
         <footer class="site-footer">
             <hr class="site-footer-spacer">
