--- a/work.html
+++ b/work.html
@@ -28,19 +28,19 @@
             </nav>
         </header>
         <div class="site-content">
-            <header class="page-header"><h1>WIP</h1></header>
-            <!-- <div class="site-item">
+            <header class="page-header"><h1>Where I've worked</h1></header>
+            <div class="site-item">
                 <div class="site-item-header">
                     Microsoft
                 </div>
                 <span style="display:table; margin-bottom:2rem;">
                     <img src="img/microsoft.svg" style="width: 6rem">
                     <div style="display:table-cell; vertical-align:middle; padding-left: 1rem; width:100%">
-                        <div>MEng in Computer Science from Cornell Tech expected spring 2023 </div>
+                        <div>Software Development Engineer Intern</div>
                         <div style="text-align:left;">
-                            New York, NY
+                            Seattle, WA
                             <span style="float:right;">
-                                2022-2023
+                                Summer 2022
                             </span>
                         </div>
                     </div>
@@ -54,11 +54,11 @@
                 <span style="display:table; margin-bottom:2rem;">
                     <img src="img/aws.svg" style="width: 6rem">
                     <div style="display:table-cell; vertical-align:middle; padding-left: 1rem; width:100%">
-                        <div>B.S. in Computer Science from Cornell University expected spring 2022 </div>
+                        <div>Software Development Engineer Intern</div>
                         <div style="text-align:left;">
-                            Ithaca, NY
+                            Seattle, WA
                             <span style="float:right;">
-                                2018-2022
+                                Summer 2021
                             </span>
                         </div>
                     </div>
@@ -73,16 +73,16 @@
                 <span style="display:table; margin-bottom:2rem;">
                     <img src="img/klaviyo.svg" style="width: 6rem">
                     <div style="display:table-cell; vertical-align:middle; padding-left: 1rem; width:100%">
-                        <div>High School Diploma</div>
+                        <div>Software Development Engineer Intern</div>
                         <div style="text-align:left;">
-                            North Andover, MA
+                            Boston, MA (Remote)
                             <span style="float:right;">
-                                2015-2018
+                                Summer 2020
                             </span>
                         </div>
                     </div>
                 </span>
-            </div> -->
+            </div>
         </div>
         <footer class="site-footer">
             <hr class="site-footer-spacer">
