--- a/education.html
+++ b/education.html
@@ -65,14 +65,16 @@
                 </span>
                 Relevant Coursework:
                 <ul>
-                    <li>CS 5414 - Distributed Systems</li>
-                    <li>CS 4120 - Compilers</li>
-                    <li>CS 4820 - Theory of Algorithms</li>
-                    <li>CS 5430 - System Security</li>
                     <li>CS 6110 - Advanced Programming Languages</li>
-                    <li>CS 4410 - Operating Systems</li>
-                    <li>CS 2800 - Discrete Structures</li>
+                    <li>CS 5414 - Distributed Systems</li>
+                    <li>CS 5430 - System Security</li>
+                    <li>CS 4820 - Theory of Algorithms</li>
                     <li>CS 4780 - Machine Learning</li>
+                    <li>CS 4450 - Networks</li>
+                    <li>CS 4410 - Operating Systems</li>
+                    <li>CS 4120 - Compilers</li>
+                    <li>CS 3110 - Functional Programming <a href="https://github.com/max-charlamb/ocaml-hearts" class="pretty-link">(OCaml Hearts)</a></li>
+                    <li>CS 2800 - Discrete Structures</li>
                 </ul>
             </div>
             <hr>
