--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p>Hi, I'm <b>Max Charlamb</b>!</p>
                     <p>I am an incoming SDE intern at Microsoft.</p>
                     <p>I am persuing an MEng at Cornell Tech in NYC.</p>
-                    <p>My intrests are programming languages and distributed systems.</p>
+                    <p>My interests are programming languages and distributed systems.</p>
                 </div>
         </div>
         <footer class="site-footer">
