--- a/work.html
+++ b/work.html
@@ -63,6 +63,8 @@
                         </div>
                     </div>
                 </span>
+                Designed and implemented a new feature for an internal facing AWS tool which automates a monthly ticket saving developer time and reducing the SLA.
+                Utilized AWS Lambdas, DynamoDB, S3, CloudFormation, and CloudWatch to create the webpage API and backend.
             </div>
             <hr>
 
@@ -82,6 +84,8 @@
                         </div>
                     </div>
                 </span>
+                Responsible for a new 'Notification Action' in Klaviyo's flow builder. Designed and presented technical documents outlining changes for the Notification Action feature to review board.
+                Once approved, I implemented both the front-end changes in React (JS/TS), and backend changes in Django (Python). 
             </div>
         </div>
         <footer class="site-footer">
