--- a/aboutme.html
+++ b/aboutme.html
@@ -68,7 +68,7 @@
                 <a taget="_blank" rel="external" href="https://www.linkedin.com/in/maxcharlamb/">
                     <i class="fa-brands fa-2x fa-linkedin site-icon-hover"></i>
                 </a>
-                <a href="mailto:mbc222@cornell.edu">
+                <a target="_blank" href="mailto:mbc222@cornell.edu">
                     <i class="fa-solid fa-2x fa-envelope site-icon-hover"></i>
                 </a>
             </div>
