--- a/projects.html
+++ b/projects.html
@@ -37,13 +37,16 @@
                 Designed and implemented a replication scheme for a novel key-value store under <a class="pretty-link" href="https://www.cs.cornell.edu/~matthelb/">Matt Burke</a>.
                 Replication was based off of the <a class="pretty-link" href="https://syslab.cs.washington.edu/research/tapir/">TAPIR</a> scheme from UW. 
             </div>
+            <hr>
             <div class="site-item">
                 <div class="site-item-header">
-                    Xi-Compiler
+                    <a class="pretty-link" href="projects/compiler.html">Xi-Compiler</a>
                 </div>
                 Built a compiler for toy language xi as part of CS 4120/4121. Xi language spec can be found <a class="pretty-link" href="https://www.cs.cornell.edu/courses/cs4120/2021sp/project/language.pdf?1616260969">here</a>,
                 the type spec can be found <a class="pretty-link" href="https://www.cs.cornell.edu/courses/cs4120/2021sp/project/types.pdf?1614809996">here</a>, and the ABI spec (application binary interface) can be found <a class="pretty-link" href="https://www.cs.cornell.edu/courses/cs4120/2021sp/project/abi.pdf?1619566659">here</a>.
+                <a class="pretty-link" href="projects/compiler.html">Try compiling Xi code!</a>
             </div>
+            <hr>
             <div class="site-item">
                 <div class="site-item-header">
                     CUAir
@@ -57,9 +60,10 @@
                     which tracked the planes position in real time and ran motor controllers to adjust the angle of the ground antenna.
                 </p> 
             </div>
+            <hr>
             <div class="site-item">
                 <div class="site-item-header">
-                    Array Sort Visualization
+                    <a class="pretty-link" href="projects/sort.html">Array Sort Visualization</a>
                 </div>
                 <p>Using JavaScript framework <a class="pretty-link" href="https://p5js.org/">p5.js</a>, I created several different visualizations while learning software development.</p>
                 <p>This examlpe visualizes and compares speed of different sorting techniques. <a class="pretty-link" href="projects/sort.html">Click here to try it out!</a></p>
