--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
             </nav>
         </header>
         <div class="site-content">
-            <header class="page-header"><h1>About Me</h1></header>
+            <!-- <header class="page-header"><h1>About Me</h1></header> -->
             <div class="pic_outerwrap">
                 <div class="pic_outline">
                     <div class="pic_inset"><img width="400px" src="img/max.JPG"></div>
