--- a/projects/compiler.html
+++ b/projects/compiler.html
@@ -33,7 +33,7 @@
                 <p>This Xi compiler implementation was created by myself, Samuel Hinson, Militsa Sotirova, and Christopher Hansen during the spring 2020 class of CS 4120.
                     It is written in Java using CUP and Jflex as the parser generator and lexer respectively. The targeted assembly langauge is x86. </p>
                 <p>It incoroprates Chaitin's algorithm for register allocation, common subexpression elimination, dead code elimination, copy propogation, and constant folding. </p>
-                <p>While the compiler supports multible files and interfaces, this web interface currently does not. Check out the  <a class="pretty-link" target="_blank" href="https://www.cs.cornell.edu/courses/cs4120/2021sp/project/language.pdf?1616260969">Xi-language spec</a> for reference!</p>
+                <p>While the compiler supports multiple files and interfaces, this web interface currently does not. Check out the <a class="pretty-link" target="_blank" href="https://www.cs.cornell.edu/courses/cs4120/2021sp/project/language.pdf?1616260969">Xi-language spec</a> for reference!</p>
             </div>
             
             <hr>
