--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
         </header>
         
         <div class="site-content">
-            <header class="page-header"><h1>Some things I've done</h1></header>
+            <!-- <header class="page-header"><h1>Some things I've done</h1></header> -->
             <div class="site-item">
                 <div class="site-item-header">
                     Novel Key-Value Store
