--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
             </nav>
         </header>
         <div class="site-content">
-            <header class="page-header"><h1>Where I've worked</h1></header>
+            <!-- <header class="page-header"><h1>Where I've worked</h1></header> -->
             <div class="site-item">
                 <div class="site-item-header">
                     Microsoft
