--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                 <div class="site-intro">
                     <p>Hi, I'm <b>Max Charlamb</b>!</p>
                     <p>I am an incoming SDE intern at Microsoft.</p>
-                    <p>I am persuing an MEng at Cornell Tech in NYC.</p>
+                    <p>I am pursuing an MEng at Cornell Tech in NYC.</p>
                     <p>My interests are programming languages and distributed systems.</p>
+                    <p>Connect with me on LinkedIn below!</p>
                 </div>
         </div>
         <footer class="site-footer">
