fixed link error

--- a/projects/sort.html
+++ b/projects/sort.html
@@ -19,7 +19,7 @@
     <div class="site">
         <header class="site-header">
             <div class="site-title">
-                <a href="index.html">
+                <a href="../index.html">
                     <img class="site-logo" src="../img/maxcharlamb.png">
                 </a>
             </div>
