updated compiler script

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p>Hi, I'm <b>Max Charlamb</b>!</p>
                     <p>I am an incoming SDE intern at Microsoft.</p>
                     <p>I am pursuing an MEng at Cornell Tech in NYC.</p>
-                    <p>My interests are programming languages and distributed systems. <a class="pretty-link" href="projects/compiler.html" style="font-size: 0.70em;">(Check out the Xi-Compiler!)</a></p>
+                    <p>My interests are programming languages and distributed systems. <a class="pretty-link" href="projects/compiler.html" style="font-size: 0.70em;">(Check out my Xi-Compiler!)</a></p>
                     <p>Connect with me on LinkedIn below!</p>
                 </div>
         </div>
